fix the visibility of the main section issue

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
   }
 
+  .hidden {
+    display: none !important;
+  }
+
   body {
     background-color: #191765;
     font-family: 'Roboto', sans-serif;
